feat(BallotCandidate):implement component and logic

--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -2,8 +2,10 @@ colorButton(endColor)
   background: endColor
 
 styleButton()
-  width: 100px
-  font-size: .9rem
-  margin: 1%
+  width: 33%
+  font-size: .7rem
+  display: flex
+  justify-content: space-around
   border-radius: $radius
+  margin: 2%
   cursor: pointer
